--- a/desarrollo_web/css/estilos.css
+++ b/desarrollo_web/css/estilos.css
@@ -7,10 +7,20 @@ body{
     padding: 0;
 }
 
+#cabecera
+{
+    background:#33A ;
+    color: white;
+    box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.5);
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+}
+
 #container
 {
 width: 70%;
-padding: 1em;
+padding: 0.8em;
 text-align: center;
 border: 1px solid #DDD;
 margin: 0 auto;
